# hello-package-world

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: hello_package_world.rst  modules.rst
hello_package_world/: hello_package_world.py
tests/: test_hello_package_world.py
