[tool.poetry]
name = "hello_package_world"
version = "0.1.0"
description = ""
authors = ["Dustin Andrews <dustin.brown.andrews@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
